[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Laser.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://scenes/enemies/Enemy2.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/effects/Explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/enemies/Enemy3.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/enemies/Enemy1.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui/HealthBar.tscn" type="PackedScene" id=7]

[node name="Enemy" type="Spatial"]
script = ExtResource( 2 )
Enemy1 = ExtResource( 6 )
Enemy2 = ExtResource( 3 )
Enemy3 = ExtResource( 5 )
Laser = ExtResource( 1 )

[node name="MovingTimer" type="Timer" parent="."]
wait_time = 0.001

[node name="LaserTimer" type="Timer" parent="."]

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
aabb = AABB( -2, -1, -2, 4, 2, 4 )

[node name="Explosion" parent="." instance=ExtResource( 4 )]
visible = false

[node name="HealthBar" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[connection signal="timeout" from="MovingTimer" to="." method="move_down"]
[connection signal="timeout" from="LaserTimer" to="." method="fire_laser"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="cleanup_ship"]
[connection signal="exploded" from="Explosion" to="." method="cleanup_ship"]
